[package]
name = "bounce_shield"
version = "1.0.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
rand = "0.8.5"
minifb = "0.27"
# bevy = "0.15.0"
# macroquad = "0.4.13"
# bevy_tweening = "0.12.0"
# bevy_math = "0.15.0"
# bevy_rand = "0.9.0"

# [lib]
# name = "bounce_shield"
# path = "lib/lib.rs"